# dmre

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
include/: ctre.hpp  dmre.h  dmre.hpp  dmre_config.h.in  dmstrtk.hpp
src/dmre_module/: dmre_module.cpp  dmre_module.h
test/dmretest/: dmretest.cpp
test/stdretest/: main.cpp
